[OPIK-3416] [FE] Add Dashboard view support to Traces page
# Conflicts:
#	apps/opik-frontend/src/components/pages-shared/dashboards/DashboardSaveActions/DashboardSaveActions.tsx

--- a/apps/opik-frontend/src/main.scss
+++ b/apps/opik-frontend/src/main.scss
@@ -73,6 +73,8 @@
     /* Chart colors */
     --chart-tick-stroke: #373d4d;
     --chart-grid-stroke: #f1f5f8;
+    --chart-icon-turquoise: #12a4b4;
+    --chart-icon-pink: #ed4a7b;
 
     /* DataTable colors */
 
@@ -283,6 +285,8 @@
     /* Chart colors */
     --chart-tick-stroke: #a3a3a3;
     --chart-grid-stroke: #303030;
+    --chart-icon-turquoise: #12a4b4;
+    --chart-icon-pink: #ed4a7b;
 
     /* Diff colors - Dark Mode */
     --diff-removed-bg: #7f1d1d;
