[OPIK-3416] [FE] Add Dashboard view support to Traces page

--- a/apps/opik-frontend/src/main.scss
+++ b/apps/opik-frontend/src/main.scss
@@ -74,6 +74,11 @@
     --chart-tick-stroke: #373d4d;
     --chart-grid-stroke: #f1f5f8;
 
+    /* Template icon colors */
+    --template-icon-metrics: #5899da;
+    --template-icon-performance: #ef6868;
+    --template-icon-scratch: #945fcf;
+
     /* DataTable colors */
 
     /* Trace thread colors */
@@ -283,6 +288,11 @@
     /* Chart colors */
     --chart-tick-stroke: #a3a3a3;
     --chart-grid-stroke: #303030;
+
+    /* Template icon colors - Dark Mode */
+    --template-icon-metrics: #5899da;
+    --template-icon-performance: #ef6868;
+    --template-icon-scratch: #945fcf;
 
     /* Diff colors - Dark Mode */
     --diff-removed-bg: #7f1d1d;
