--- a/apps/opik-frontend/src/main.scss
+++ b/apps/opik-frontend/src/main.scss
@@ -76,6 +76,11 @@
     --chart-icon-turquoise: #12a4b4;
     --chart-icon-pink: #ed4a7b;
 
+    /* Template icon colors */
+    --template-icon-metrics: #5899da;
+    --template-icon-performance: #ef6868;
+    --template-icon-scratch: #945fcf;
+
     /* DataTable colors */
 
     /* Trace thread colors */
@@ -287,6 +292,11 @@
     --chart-grid-stroke: #303030;
     --chart-icon-turquoise: #12a4b4;
     --chart-icon-pink: #ed4a7b;
+
+    /* Template icon colors - Dark Mode */
+    --template-icon-metrics: #5899da;
+    --template-icon-performance: #ef6868;
+    --template-icon-scratch: #945fcf;
 
     /* Diff colors - Dark Mode */
     --diff-removed-bg: #7f1d1d;
