--- a/apps/opik-frontend/src/main.scss
+++ b/apps/opik-frontend/src/main.scss
@@ -78,6 +78,7 @@
     --template-icon-metrics: #5899da;
     --template-icon-performance: #ef6868;
     --template-icon-scratch: #945fcf;
+    --template-icon-experiments: #10b981;
 
     /* DataTable colors */
 
@@ -293,6 +294,7 @@
     --template-icon-metrics: #5899da;
     --template-icon-performance: #ef6868;
     --template-icon-scratch: #945fcf;
+    --template-icon-experiments: #10b981;
 
     /* Diff colors - Dark Mode */
     --diff-removed-bg: #7f1d1d;
